# uvc_qobject

./: .gitignore  CMakeLists.txt  MainWidget.cpp  MainWidget.h  main.cpp  pyproject.toml  pyuvc_qobject.sip  test.py  uvc_qobject.cpp  uvc_qobject.h  uvc_qobject.pro  uvc_qobject.sip
QUVCObject/: CMakeLists.txt  QUVCObject.cpp  QUVCObject.h
UVCObject/: CMakeLists.txt  uvc_object.cpp  uvc_object.h
UVCQObject/: CMakeLists.txt  uvc_qobject.cpp  uvc_qobject.h
app/: CMakeLists.txt  MainWidget.cpp  MainWidget.h  main.cpp
simple_app/: CMakeLists.txt  main.cpp
sip/QUVCObject/: QUVCObjectmod.sip
sip/UVCQObject/: UVCQObject.toml  UVCQObjectmod.sip
src/: QUVCObject.cpp  QUVCObject.h  uvc_qobject.cpp  uvc_qobject.h
uvc_object/: CMakeLists.txt  uvc_object.h
uvc_qobject/: CMakeLists.txt
