[build-system]
requires = ["sip == 6.8.3", "PyQt-builder >=1.10, <2"]
build-backend = "sipbuild.api"

[tool.sip.project]
sip-include-dirs = ["/usr/lib/python3/dist-packages/PyQt6/bindings"]
abi-version="13.6"

[tool.sip.builder]
qmake="/usr/lib/qt6/bin/qmake"

[tool.sip]
project-factory = "pyqtbuild:PyQtProject"

[project]
name = "QUVCObject"
dependencies = ["PyQt6 (==6.6.1)"]

[tool.sip.bindings.QUVCObject]
headers = ["QUVCObject.h"]
include-dirs = ["src", "/usr/include/x86_64-linux-gnu/qt6/", "/usr/include/x86_64-linux-gnu/qt6/QtCore/"]
libraries = ["QUVCObject",  "uvc", "Qt6Core"]
library-dirs = ["build"]